Update child iterating of path objects